Fix bug with scrolling on small devices

--- a/petitions/static/css/style.css
+++ b/petitions/static/css/style.css
@@ -77,9 +77,11 @@ h1, h2, h3, h4, h5, h6 {
     color: #1ad3af;
 }
 
-.panel {
-    position: sticky;
-    top: 30px;
+@media screen and (min-width: 1024px) {
+    .panel {
+        position: sticky;
+        top: 30px;
+    }
 }
 
 ul, li,
